index page with social icons and description and horizontal menu

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,7 @@ defaults:
       path: ""
     values:
       layout: "default"
+
+# Pagination configuration (used by the `blog` layout)
+paginate:              5
+paginate_path:         /page-:num/
