fixed twitter and footer

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -6,7 +6,7 @@ email:
   fa-icon: 'fa-envelope'
 
 twitter:
-  id: 'gotpicklez'
+  id: 'Tech_Accountant'
   href: 'https://www.twitter.com/'
   name: 'Twitter'
   fa-icon: 'fa-twitter'
