--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 # This file contains meta data for various social media sites
 email:
-  id: 'anka.kondraska@gmail.com'
+  id: 'dynamic.acc0untants@gmail.com'
   href: 'mailto:'
   name: 'Email'
   fa-icon: 'fa-envelope'
